--- a/src/the/screen/of/many/Menu.fxml
+++ b/src/the/screen/of/many/Menu.fxml
@@ -70,7 +70,57 @@
     </Tab>
     <Tab text="Combat">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <SplitPane layoutX="229.0" layoutY="124.0" orientation="VERTICAL" prefHeight="447.0" prefWidth="640.0" stylesheets="@ScreenOfMany.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                           <children>
+                              <AnchorPane layoutX="219.0" layoutY="123.0" prefHeight="445.0" prefWidth="638.0" style="-fx-background-color: black;" stylesheets="@ScreenOfMany.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <ListView fx:id="initiativeList" layoutX="14.0" layoutY="41.0" prefHeight="265.0" prefWidth="200.0" AnchorPane.bottomAnchor="139.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="41.0" />
+                                    <Label layoutX="77.0" layoutY="6.0" text="Initiative">
+                                       <font>
+                                          <Font name="Dubai Medium" size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <HBox layoutX="14.0" layoutY="311.0" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="14.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="315.0" text="Name:" />
+                                          <TextField fx:id="combatantName" layoutX="65.0" layoutY="311.0" prefHeight="25.0" prefWidth="150.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox layoutX="14.0" layoutY="337.0" AnchorPane.bottomAnchor="83.0" AnchorPane.leftAnchor="14.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="341.0" text="Initiative:" />
+                                          <TextField fx:id="combatantInitiative" layoutX="65.0" layoutY="337.0" prefHeight="25.0" prefWidth="38.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox layoutX="13.0" layoutY="366.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="14.0">
+                                       <children>
+                                          <Label layoutX="13.0" layoutY="370.0" text="Health:" />
+                                          <TextField fx:id="combatantHealth" layoutX="65.0" layoutY="366.0" prefHeight="25.0" prefWidth="37.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox layoutX="114.0" layoutY="337.0" AnchorPane.bottomAnchor="83.0" AnchorPane.leftAnchor="114.0">
+                                       <children>
+                                          <Button fx:id="addCombatant" layoutX="114.0" layoutY="337.0" mnemonicParsing="false" text="Add" />
+                                          <Button fx:id="deleteCombatant" layoutX="166.0" layoutY="337.0" mnemonicParsing="false" text="Delete" />
+                                       </children>
+                                    </HBox>
+                                    <HBox layoutX="114.0" layoutY="366.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="114.0">
+                                       <children>
+                                          <Button fx:id="cloneCombatant" layoutX="114.0" layoutY="366.0" mnemonicParsing="false" text="Clone" />
+                                          <TextField fx:id="cloneCount" layoutX="166.0" layoutY="366.0" prefHeight="25.0" prefWidth="52.0" promptText="Count" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </AnchorPane>
+                           </children>
+                        </AnchorPane>
+                    </items>
+                  </SplitPane>
+               </children></AnchorPane>
       </content>
     </Tab>
   </tabs>
